tests/success/match_rvalue_to_move_reference.bz
function test1(: move int32);

function main()
{
	test1(0);
}
