tests/error/move_move_reference.bz
function test(i: move int32)
{
	move i;
}
